# rs-gh-app

./: .gitignore  Cargo.toml  README.md  apps.yaml  install.sh
.github/workflows/: rust-binaries.yml
src/: app.rs  github.rs  main.rs
