[package]
name = "rs-gh-app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
regex = "1.10"
tempfile = "3.8"
chrono = "0.4"
openssl = { version = "0.10.73", features = ["vendored"] }
