[package]
name = "rs-gh-app"
version = "0.2.1"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
openssl = { version = "0.10.73", features = ["vendored"] }
chrono = "0.4"
regex = "1.10"
semver = "1.0"
dirs = "5.0"
tempfile = "3.8"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
